# wickra-benchmark

./: ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  deny.toml  lychee.toml  osv-scanner.toml  repo-metadata.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  propose_a_case.md
.github/scripts/: check-cbindgen.sh  check-manifest.sh
.github/workflows/: bench.yml  ci.yml  release.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/include/: wickra_benchmark.h
bindings/c/src/: lib.rs
bindings/csharp/WickraBenchmark/: Benchmark.cs  DllResolver.cs  Native.cs  README.md  WickraBenchmark.csproj
bindings/csharp/WickraBenchmark.Tests/: BenchmarkTests.cs  GoldenTests.cs  WickraBenchmark.Tests.csproj
bindings/go/: README.md  benchmark_test.go  go.mod  golden_test.go  wickra.go
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/org/wickra/benchmark/: Benchmark.java  Native.java
bindings/java/src/test/java/org/wickra/benchmark/: BenchmarkTest.java  GoldenTest.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: benchmark.test.js  completeness.test.js  golden.test.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/wickra_benchmark/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_completeness.py  test_golden.py  test_smoke.py
bindings/r/: DESCRIPTION  NAMESPACE  README.md
bindings/r/R/: benchmark.R
bindings/r/src/: Makevars  Makevars.win  wickra_benchmark.c
bindings/r/tests/: run_tests.R
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: golden.test.js
cases/: README.md  breakout-channel-01.json  buy-and-hold-01.json  ema-trend-follow-01.json  rsi-mean-reversion-01.json  sma-crossover-01.json  suite.json
crates/benchmark-bench/: Cargo.toml
crates/benchmark-bench/benches/: benchmark.rs
crates/benchmark-cli/: Cargo.toml
crates/benchmark-cli/src/: args.rs  main.rs  run.rs
crates/benchmark-core/: Cargo.toml
crates/benchmark-core/src/: benchmark.rs  case.rs  config.rs  error.rs  hash.rs  lib.rs  runner.rs  suite.rs  tests.rs
crates/benchmark-core/tests/: conformance.rs  golden.rs  path_eq_inline.rs  proptest_invariants.rs
crates/benchmark-core/tests/common/: mod.rs
datasets/: README.md  breakout.csv  flat.csv
docs/: CASES.md  Cookbook.md  DATASETS.md  HASHING.md  REPRODUCING.md
examples/: README.md
examples/c/: CMakeLists.txt  run.c  run.cpp
examples/csharp/Run/: Program.cs  Run.csproj
examples/data/datasets/: sma-uptrend.csv
examples/go/: go.mod  run.go
examples/java/: Run.java
examples/node/: package-lock.json  package.json  run.js
examples/python/: run.py
examples/r/: run.R
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: case_parse.rs  command_json.rs  run_case.rs  suite_parse.rs
golden/: README.md
golden/commands/: breakout-channel-01.json  buy-and-hold-01.json  ema-trend-follow-01.json  rsi-mean-reversion-01.json  sma-crossover-01.json  suite-list.json  suite-run.json  version.json
golden/datasets/: MANIFEST.json  ema-trend.csv  mean-revert-range.csv
golden/expected/: breakout-channel-01.json  buy-and-hold-01.json  ema-trend-follow-01.json  rsi-mean-reversion-01.json  sma-crossover-01.json  suite-list.json  suite-run.json  version.json
