# Wickra Benchmark — workspace.
# A reproducible, golden-verified benchmark suite for quant backtests: a curated,
# hash-pinned collection of (strategy, dataset, expected report) cases that anyone
# recomputes in ten languages and confirms byte-for-byte. The core
# (`benchmark-core`) recomputes a case's report with the pinned wickra-backtest
# engine, hashes it with the same canonicalization wickra-proof uses, and compares
# against the frozen expectation. It is exposed as a JSON-over-C-ABI data API in
# ten languages: a Rust core with native Python/Node/WASM bindings plus a C ABI
# hub for C/C++/C#/Go/Java/R.
#
# The `members` list grows as crates are added, phase by phase; the final set is:
#   crates/benchmark-core, crates/benchmark-cli, crates/benchmark-bench,
#   bindings/c, bindings/python, bindings/node, bindings/wasm

[workspace]
resolver = "2"
members = [
    "crates/benchmark-core",
    "crates/benchmark-cli",
    "bindings/c",
    "bindings/python",
]
# The fuzz crate is its own (detached) workspace — cargo-fuzz builds it on a
# nightly toolchain with sanitizer flags.
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
authors = ["wickra-lib"]
repository = "https://github.com/wickra-lib/wickra-benchmark"
homepage = "https://wickra.org"
readme = "README.md"
keywords = ["trading", "backtest", "benchmark", "determinism", "finance"]
categories = ["finance", "command-line-utilities"]

[workspace.dependencies]
# The backtest engine is the runtime dependency: a case's report is recomputed
# with it and compared. Consumed from git until its first crates.io release (its
# tag is USER-GO gated); a `version` is pinned alongside `git` so it is not a
# wildcard (cargo-deny bans.wildcards). Its version() is the engine the expected
# report is bound to.
wickra-backtest-core = { git = "https://github.com/wickra-lib/wickra-backtest", version = "0.1" }
# Workspace-internal core, referenced by the CLI, bench and bindings.
benchmark-core = { version = "0.1.0", path = "crates/benchmark-core" }
# Serialization — the data-driven boundary (case/suite/report/command as JSON).
serde = { version = "1", features = ["derive"] }
# `float_roundtrip` makes serde_json's float parser correctly rounded: a float
# re-parses to the exact same f64 it was written from. Without it the parser can
# land on an adjacent f64 for large magnitudes, which breaks canonicalization
# idempotence — the determinism invariant benchmark shares with wickra-proof.
serde_json = { version = "1", features = ["float_roundtrip"] }
toml = "1.1"
thiserror = "2"
# Parallel suite execution (feature-gated: off on the sequential WASM path).
rayon = "1"
# The canonical report hash (same canonicalization as wickra-proof).
blake3 = "1"
clap = { version = "4", features = ["derive"] }
# C ABI header generation.
cbindgen = "0.27"
# Test/dev.
criterion = "0.5"
proptest = "1"

[workspace.lints.rust]
# The core and all bindings are safe Rust; the C ABI hub re-allows unsafe
# locally (it must call across the FFI boundary).
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
similar_names = "allow"

[profile.release]
# Panics must never unwind across the C ABI boundary: abort instead.
lto = true
codegen-units = 1
panic = "abort"
strip = true
