[package]
name = "wickra-benchmark-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
# The core under test, plus the engine used to synthesize blessed cases.
benchmark-core = { path = "../crates/benchmark-core" }
wickra-backtest-core = { git = "https://github.com/wickra-lib/wickra-backtest", version = "0.1" }

# Detach from the parent workspace — cargo-fuzz builds this crate on its own with
# sanitizer flags on a nightly toolchain.
[workspace]

[[bin]]
name = "case_parse"
path = "fuzz_targets/case_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "suite_parse"
path = "fuzz_targets/suite_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "run_case"
path = "fuzz_targets/run_case.rs"
test = false
doc = false
bench = false

[[bin]]
name = "command_json"
path = "fuzz_targets/command_json.rs"
test = false
doc = false
bench = false
